Update and rename 2022-01-20.md to 2022-01-20-test.md

--- a/_posts/2022-01-20-test.md
+++ b/_posts/2022-01-20-test.md
@@ -4,9 +4,8 @@ layout: post
 title: 测试博文
 date: 2022-01-20
 Author: 来自中世界
-categories: 
 tags: [sample, document]
 comments: ture
 
 ---
-
+hello world
